// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Builtin resources, STDIO should read meta resources, patternfly-components-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Components Index Metadata
Use these parameters to filter the list of PatternFly components.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`react\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://components/index\`
- **Filtered View (version=...)**: \`patternfly://components/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://components/index?version=...&category=...\`",
  "uri": "patternfly://components/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-docs-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Documentation Index Metadata
Use these parameters to filter the PatternFly documentation index.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`design-tokens\`, \`development-guidelines\`, \`grammar\`, \`react\`, \`writing-guides\` | Filter by category |
| \`section\` | \`ai\`, \`charts\`, \`components\`, \`content-design\`, \`extensions\`, \`foundations-and-styles\`, \`get-started\`, \`guidelines\`, \`layouts\`, \`patterns\`, \`resources\`, \`upgrade\` | Filter by section |
| \`version\` | \`v4\`, \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://docs/index\`
- **Filtered View (version=...)**: \`patternfly://docs/index?version=...\`
- **Filtered View (category=...)**: \`patternfly://docs/index?category=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://docs/index?version=...&category=...\`
- **Filtered View (section=...)**: \`patternfly://docs/index?section=...\`
- **Filtered View (version=...&section=...)**: \`patternfly://docs/index?version=...&section=...\`
- **Filtered View (category=...&section=...)**: \`patternfly://docs/index?category=...&section=...\`
- **Filtered View (version=...&category=...&section=...)**: \`patternfly://docs/index?version=...&category=...&section=...\`",
  "uri": "patternfly://docs/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-schemas-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Component Schemas Index Metadata
Use these parameters to filter the list of PatternFly component schemas.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`react\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://schemas/index\`
- **Filtered View (version=...)**: \`patternfly://schemas/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://schemas/index?version=...&category=...\`",
  "uri": "patternfly://schemas/meta",
}
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two remote files 1`] = `
"<!-- mcp:provenance id="http://127.0.0.1:5010/notARealPath/AboutModal.md" -->
# Content for http://127.0.0.1:5010/notARealPath/AboutModal.md
Source: http://127.0.0.1:5010/notARealPath/AboutModal.md

# Test Document

This is a test document for mocking remote HTTP requests.

---

<!-- mcp:provenance id="http://127.0.0.1:5010/notARealPath/README.md" -->
# Content for http://127.0.0.1:5010/notARealPath/README.md
Source: http://127.0.0.1:5010/notARealPath/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration"
`;

exports[`Builtin tools, STDIO should expose expected tools and stable shape 1`] = `
{
  "toolNames": [
    "searchPatternFlyDocs",
    "usePatternFlyDocs",
  ],
}
`;

exports[`Builtin tools, STDIO should return expected markdown structure for search results: markdown 1`] = `
"# Search results for PatternFly version "v6" and "button". Showing 1 exact match.
1. **button**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: button
    - **URLs**:
      - [Button - (v6) - Design Guidelines for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/957756128e8ddfc4be5db49e72312a2c43b9d220/packages/documentation-site/patternfly-docs/content/components/button/button.md)
      - [Button - (v6) - Accessibility for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/957756128e8ddfc4be5db49e72312a2c43b9d220/packages/documentation-site/patternfly-docs/content/components/accessibility/button/button.md)
      - [Button - (v6) - Examples for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-react/6f2385bbcc03de22a7ae8be506481e1b4d653200/packages/react-core/src/components/Button/examples/Button.md)
    - **Resources**:
      - **URI**: patternfly://docs/button?version=v6
      - **JSON Schemas**: patternfly://schemas/button?version=v6



---


**Important**:
  - Use the "usePatternFlyDocs" tool with the above names and URLs to fetch resource content.
  - Use a search all ("*") to find all available resources."
`;

exports[`Logging should allow setting logging options, default 1`] = `[]`;

exports[`Logging should allow setting logging options, stderr 1`] = `
[
  "[INFO]: Server logging enabled.
",
  "[INFO]: Server stats enabled.
",
  "[INFO]: No external resources loaded.
",
  "[INFO]: No external tools loaded.
",
  "[INFO]: Registered collection: patternfly-docs
",
  "[INFO]: Registered collection: patternfly-component-schemas
",
  "[INFO]: Update collection: patternfly-component-schemas
",
  "[INFO]: Update collection: patternfly-docs
",
  "[INFO]: Registered resource: patternfly-context
",
  "[INFO]: Registered resource: patternfly-components-index-meta
",
  "[INFO]: Registered resource: patternfly-components-index
",
  "[INFO]: Registered resource: patternfly-docs-index-meta
",
  "[INFO]: Registered resource: patternfly-docs-index
",
  "[INFO]: Registered resource: patternfly-docs-template
",
  "[INFO]: Registered resource: patternfly-schemas-index-meta
",
  "[INFO]: Registered resource: patternfly-schemas-index
",
  "[INFO]: Registered resource: patternfly-schemas-template
",
  "[INFO]: Registered tool: usePatternFlyDocs
",
  "[INFO]: Registered tool: searchPatternFlyDocs
",
  "[INFO]: @patternfly/patternfly-mcp server running on stdio transport
",
]
`;

exports[`Logging should allow setting logging options, with experimental flag set 1`] = `[]`;

exports[`Logging should allow setting logging options, with log level filtering 1`] = `[]`;

exports[`Logging should allow setting logging options, with mcp protocol 1`] = `
[
  {
    "method": "notifications/message",
    "params": {
      "data": "@patternfly/patternfly-mcp server running on stdio transport",
      "level": "info",
      "logger": "@patternfly/patternfly-mcp",
    },
  },
]
`;

exports[`Tools should interact with a tool, echo basic tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
  "options": [
    "serverName",
    "serverVersion",
    "nodeMajor",
    "repoName",
  ],
}
`;

exports[`Tools should interact with a tool, echo create MCP tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
}
`;
